# tech0notta

./: .dockerignore  .env.example  .gitignore  AZURE_DEPLOYMENT_GUIDE.md  BOT_CONTAINER_COMPARISON.md  Dockerfile  Dockerfile.aca-bot  Dockerfile.bot  Dockerfile.browser-bot  FFMPEG_SETUP.md  PYTHON_INSTALL_GUIDE.md  README.md  SWAGGER_SETUP.md  TASK_5.1_IMPLEMENTATION_SUMMARY.md  TASK_5.3_IMPLEMENTATION_SUMMARY.md  TASK_5.5_IMPLEMENTATION_SUMMARY.md  TASK_5.7_IMPLEMENTATION_SUMMARY.md  alembic.ini  check_db.py  create_test_data.py  generate_jwt.py  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  start_backend.ps1  startup.sh  test_chat_implementation.py  test_relation_debug.py  test_task_api_manual.py  test_task_decomposition.py  test_task_decomposition_api.py  test_task_extraction.py  test_task_extraction_comprehensive.py  test_task_registration.py  test_task_registration_mock.py
.github/workflows/: main_app-002-tech0notta-backend-dev.yml
alembic/: env.py
alembic/versions/: ff3a4f54c410_baseline.py
app/: auth.py  config.py  database.py  google_meet_config.py  main.py  teams_config.py  timezone.py  zoom_config.py  zoom_notion_config.py
app/bot_runner/: Dockerfile  audio_capture.sh  config_generator.py  entrypoint.py  realtime_transcriber.py  setup-pulseaudio.sh  upload_workflow.py
app/browser_bot/: bot_http_server.py  entrypoint-aca-app.sh  entrypoint-aca.sh  entrypoint.py  entrypoint.sh  google_meet_bot.py  teams_bot.py  zoom_bot.py
app/models/: __init__.py  chat.py  customer.py  deal.py  job.py  notification.py  notification_db.py  task.py  user.py
app/prompts/: summary_default.md
app/routers/: approval.py  bot_router.py  chat.py  customers.py  deals.py  jobs.py  live_router.py  notifications.py  notion.py  projects.py  rtms_router.py  summarize.py  sync_router.py  tasks.py  transcribe.py  upload.py  zoom_webhook.py
app/schemas/: chat.py
app/services/: audio_extractor.py  azure_openai.py  azure_speech.py  azure_speech_batch.py  blob_storage.py  bot_service.py  chat_service.py  crm_service.py  live_transcription_service.py  metadata_service.py  notification_service.py  notion_client.py  notion_task_service.py  notion_user_service.py  prompt_loader.py  rtms_client.py  sdk_jwt_service.py  slack_service.py  speaker_recognition_service.py  task_service.py  transcription_service.py  zoom_api_service.py  zoom_auth_service.py  zoom_notion_service.py
app/zoom_bot/: CMakeLists.txt  audio_raw_data_delegate.cpp  audio_raw_data_delegate.h  audio_raw_data_handler.cpp  build_bot.sh  generate_jwt.sh  main.cpp  token.txt  zoom_meeting_bot.cpp  zoom_meeting_bot.h
tests/: conftest.py  test_task_crud.py
tests/integration/: test_chat_api.py  test_crm_api.py  test_task_api_integration.py
tests/unit/: test_auth.py  test_chat_service.py  test_config.py  (+7 more)
(+11 files in other folders)
